<resources>
    <string name="app_name" translatable="false">TFG</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="login">Inicio de sesión</string>
    <string name="email" translatable="false">Email</string>
    <string name="prompt_password">Contraseña (8 caracteres)</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="medidas">Medidas de prevención</string>
    <string name="sintomas">Síntomas</string>
    <string name="mapa">Mapa de casos</string>
    <string name="fiebre">Fiebre (Más de 39º)</string>
    <string name="tos">tos</string>
    <string name="Dificultad">Dificultad para respirar</string>
    <string name="Visité">Visité un país los últimos 14 días</string>
    <string name="Dolor">Dolor de garganta</string>
    <string name="facebook_app_id" translatable="false">220078085959152</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb220078085959152</string>
    <string name="error">Error al iniciar sesión</string>
    <string name="Cancelar">Inicio cancelado</string>
    <string name="tlf">Teléfono</string>
    <string name="titlo_prev">QUÉDATE EN CASA.SALVA VIDAS.</string>
    <string name="subtitulo">Ayuda a frenar la enfermedad</string>
    <string name="uno">QUÉDATE en casa lo máximo posible</string>
    <string name="dos">MANTÉN el distanciamiento social</string>
    <string name="tres">LÁVATE las manos con frecuencia</string>
    <string name="cuatro">TOSE cubriéndote con el codo</string>
    <string name="cinco">CONTACTA si tienes sintomas</string>
    <string name="Informacion">Información general:</string>
    <string name="title_activity_hospital" translatable="false">Map</string>
    <string name="title_activity_mapa_casos" translatable="false">Map</string>
    <string name="volver">volver</string>
    <string name="error_servidor">No se puede conectar con el servidor, porfavor compruebe su conexión a internet</string>
    <string name="toast_campos">Debe rellenar los campos indicados</string>
    <string name="toast_gps">No tengo permiso para usar el GPS</string>
    <string name="Indicios_enfermedad">Indicios de la enfermedad</string>
    <string name="direccion_enfermo">Es bastante posible que tenga la enfermedad, por favor dirijase a la dirección indicada.</string>
    <string name="error_pass1">Las contraseñas no coinciden</string>
    <string name="Registrando_usuario">Registrando usuario</string>
    <string name="Usuario_registrado">Usuario registrado</string>
    <string name="mail_existente">Ya existe un usuario con este email, por favor pruebe con otro correo</string>
    <string name="No_enfermo">No estás enfermo</string>
    <string name="cero_casos">No hay casos registrados en la app</string>
    <string name="requerido">* (Campos obligatorios)</string>
    <string name="pass">Contraseña</string>
    <string name="toast_caracteres">La contraseña debe tener un mínimo de 8 caracteres</string>
    <string name="toast_NoMail">Mail inválido</string>
    <string name="NoReconocido">Email o contraseña no reconocidas, pruebe de nuevo o bien si no está registrado por favor registrese</string>
    <string name="ubicación">Active la ubicación para realizar el test</string>
    <string name="olvidar">¿Olvidó la contraseña?</string>
    <string name="Recuperar">Recuperar</string>
    <string name="EmailNoReconocido">No existe un usuario con ese email</string>
    <string name="se_requiere">Debe rellenar todos los campos</string>
    <string name="title_activity_probando" translatable="false">Map</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_configurar" translatable="false">ConfigurarActivity</string>
    <string name="New_pass">Cambio de contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="codigo">Código</string>
    <string name="cod_inva">código inválido</string>
    <string name="Email_pass">Si pulsa Confirmar recibirá un mensaje con una nueva contraseña</string>
    <string name="Confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="texto">Protéjase a sí mismo y a quienes lo rodean informándose y tomando las precauciones adecuadas. Siga los consejos de su organismo de salud pública local. Para evitar la propagación de una enfermedad: Lávese las manos con frecuencia. Use agua y jabón o un desinfectante de manos a base de alcohol. Manténgase a una distancia segura de cualquier persona que tosa o estornude. No se toque los ojos, la nariz o la boca. Cuando tosa o estornude, cúbrase la nariz y la boca con el codo flexionado o con un pañuelo. Quédese en casa si se siente mal. Si tiene fiebre, tos y dificultad para respirar, solicite atención médica. Llame con antelación. Siga las instrucciones de su organismo sanitario local. Evitar las visitas innecesarias a los centros de atención médica permite que los sistemas sanitarios funcionen con mayor eficacia, lo que redunda en su protección y en la de los demás.</string>
    <string name="no_esta_enfermo">No aparenta sintomas de tener alguna enfermedad</string>
    <string name="Configurar">Configurar</string>
    <string name="Guardar">Guardar cambios</string>
    <string name="Eliminar">Eliminar usuario</string>
    <string name="Antigua_pass">Antigua contraseña</string>
    <string name="Modificar_Datos">Si continua modificará los datos que haya solicidatado modificar si está de acuerdo con los datos introducidos pulse aceptar</string>
    <string name="Eliminar_datos">Está apunto de eliminar su usuario registrado en esta app, una vez pulse confirmar no podrá volver a iniciar sesión con sus credenciales.¿Desea continuar?</string>
    <string name="Pass_vieja">La contraseña introducida no coincide con la ya establecida</string>
    <string name="Coincide">La nueva contraseña no puede coincidir con la anterior</string>


</resources>
