<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="75dp"
        android:text="@string/fiebre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="75dp"
        android:text="@string/tos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="75dp"
        android:text="@string/Dolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="75dp"
        android:text="@string/Dificultad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="75dp"
        android:text="@string/Visité"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <Button
        android:id="@+id/button"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="145dp"
        android:text="Test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
</androidx.constraintlayout.widget.ConstraintLayout>