<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".Recuperar_2_Activity">

    <EditText
        android:id="@+id/editTextRecupPass1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/codigo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="139dp"
        android:layout_height="0dp"

        android:layout_marginTop="175dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/btn"
        android:text="@string/enviar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecupPass1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="86dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>