<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".RecuperarActivity">

    <EditText
        android:id="@+id/editTextRecupEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRecupPass1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecupEmail" />

    <EditText
        android:id="@+id/editTextRecupPass2"
        android:layout_width="240dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecupPass1" />

    <Button
        android:id="@+id/buttonRecuperar"
        android:layout_width="139dp"
        android:layout_height="53dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/btn"

        android:text="@string/Recuperar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecupPass2" />
</androidx.constraintlayout.widget.ConstraintLayout>