<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"

    tools:context=".ConfigurarActivity">

    <EditText
        android:id="@+id/editTextNombreConfig"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/editTextNewpass"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="19dp"
        android:gravity="center_horizontal"
        android:hint="@string/New_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/buttonVolverConfig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/editTextDniConfig"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Dni"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidosConfig" />

    <EditText
        android:id="@+id/editTexttlfConfig"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/tlf"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDniConfig" />

    <EditText
        android:id="@+id/editTextApellidosConfig"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreConfig" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexttlfConfig" />

    <TextView
        android:id="@+id/textViewGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_horizontal"
        android:text="@string/Guardar"
        android:textColor="#3555D5"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonVolverConfig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewpass" />

    <TextView
        android:id="@+id/textViewEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="180dp"
        android:gravity="center_horizontal"
        android:text="@string/Eliminar"
        android:textColor="#D80A0A"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuardar" />

    <Button
        android:id="@+id/buttonVolverConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="48dp"
        android:background="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

</androidx.constraintlayout.widget.ConstraintLayout>