<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:gravity="center_horizontal"
        android:text="Correo"
        android:textColor="#d35656"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOff"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConfigurar"
        android:layout_width="266dp"
        android:layout_height="70dp"


        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/btn"
        android:text="@string/Configurar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMapa" />

    <Button
        android:id="@+id/buttonPrevencion"
        android:layout_width="266dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/btn"
        android:foregroundGravity="center"
        android:text="@string/medidas"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <Button
        android:id="@+id/buttonSintomas"
        android:layout_width="266dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/btn"
        android:foregroundGravity="center"
        android:text="@string/sintomas"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrevencion" />

    <Button
        android:id="@+id/buttonMapa"
        android:layout_width="266dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/btn"
        android:foregroundGravity="center"
        android:text="@string/mapa"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSintomas" />

    <Button
        android:id="@+id/buttonOff"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:background="@android:drawable/ic_lock_power_off"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>